fix phone alignments

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,7 @@
     margin-top: 6rem;
     background-color: white;
     display: inline-block;
-    min-width: 41rem;
+    width: 100%;
     min-height: 40rem;
 }
 
